[workspace]
members = [
    "contracts/*",
    "packages/*",
    "multitests",
]

resolver = "2"

[workspace.package]
version    = "0.1.1"
edition    = "2021"
repository = "https://github.com/EclipsePad/equinox-contracts"
authors    = ["Tadao Fukuda"]
license    = "Apache-2.0"

[workspace.dependencies]
anyhow                  = "1"
cosmwasm-schema         = "1.1.0"
cosmwasm-std            = "1.1"
cw2                     = "1.1.0"
cw20                    = "1.1.0"
cw20-base               = { version = "1.1.0", features = ["library"] }
cw-controllers          = "1.0.1"
# cw-multi-test           = "0.16"
cw-multi-test = { git = "https://github.com/astroport-fi/cw-multi-test", branch = "feat/bank_with_send_hooks_1_0", features = ["cosmwasm_1_1"] }
cw-storage-plus         = "1.0.1"
cw-utils                = "1.0.1"
schemars                = "0.8.1"
semver                  = "1.0.20"
serde                   = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror               = "1.0.23"
neutron-sdk = "0.10.0"
osmosis-std = "0.21.0"
derivative = "2.2"


equinox-msg             = { path = "./packages/equinox_msg" }
eclipse-base            = { path = "./packages/eclipse-base" }
minter-mocks            = { path = "./packages/minter-mocks" }
cw20-gift               = { path = "./packages/cw20-gift" }
eclipastro-token        = { path = "./contracts/token" }
token-converter         = { path = "./contracts/token_converter" }
flexible-staking        = { path = "./contracts/flexible_staking" }
timelock-staking        = { path = "./contracts/timelock_staking" }
reward-distributor      = { path = "./contracts/reward_distributor" }
voter                   = { path = "./contracts/voter" }
lp-staking              = { path = "./contracts/lp_staking" }
lockdrop                = { path = "./contracts/lockdrop" }
# gauge-contract          = { path = "./contracts/gauge_contract", features = ["library"] }
astroport-factory       = { git = "https://github.com/astroport-fi/astroport-core.git", version = "1.8.0" }
astroport-incentives    = { git = "https://github.com/astroport-fi/astroport-core.git", version = "1.1.0" }
astroport-pair          = { git = "https://github.com/astroport-fi/astroport-core.git", version = "2.0.1" }
astroport-pair-stable   = { git = "https://github.com/astroport-fi/astroport-core.git", version = "4.0.0" }
astroport-router        = { git = "https://github.com/astroport-fi/astroport-core.git", version = "1.2.1" }

astroport-staking       = { git = "https://github.com/astroport-fi/astroport-core.git", version = "2.1.0" }
astroport-vesting       = { git = "https://github.com/astroport-fi/astroport-core.git", version = "1.4.0" }
astroport-xastro-token  = { git = "https://github.com/astroport-fi/astroport-core.git", version = "1.1.0" }
# astroport               = { git = "https://github.com/astroport-fi/astroport-core.git", version = "5.1.0" }
astroport = "=5.1.0-vxastro-rc.1"
# astroport = { git = "https://github.com/astroport-fi/hidden_astroport_core", branch = "feat/incentivize_many", version = "5.1.0-vxastro-rc.1" }

# astroport-tokenfactory-tracker = { git = "https://github.com/astroport-fi/astroport-core", version = "1", branch = "feat/astroport_v4" }
astroport-generator     = { git = "https://github.com/astroport-fi/astroport-core.git" }
astroport-whitelist     = { git = "https://github.com/astroport-fi/astroport-core.git" }
# astroport-pair-stable   = { git = "https://github.com/astroport-fi/astroport-core.git", version = "3.4.0" }
# astroport-governance    = { git = "https://github.com/astroport-fi/astroport-governance.git" }
astroport-governance = "3.0.0"

# updated astroport contracts for integration testing
astroport-voting-escrow = "1.0.0-rc.1"
astroport-emissions-controller = "1.0.0-rc.1"
# astroport-emissions-controller-outpost = "1.0.0-rc.1"
astro-assembly = "3.0.0-rc.1"
eclipsepad-staking = { path = "./packages/eclipsepad-staking" }
# astroport-escrow-fee-distributor = { path = "./packages/astroport_escrow_fee_distributor" }
astroport-tokenfactory-tracker = { git = "https://github.com/astroport-fi/astroport-core.git", version = "2.0.0", features = ["library"] }

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

