[workspace]
members = [
    "contracts/*",
    "packages/*",
    "multitests",
]

resolver = "2"

[workspace.package]
version    = "0.1.1"
edition    = "2021"
repository = "https://github.com/EclipsePad/equinox-contracts"
authors    = ["Tadao Fukuda"]
license    = "Apache-2.0"

[workspace.dependencies]
anyhow                  = "1"
cosmwasm-schema         = "1.1.0"
cosmwasm-std            = "1.1"
cw2                     = "1.1.0"
cw20                    = "1.1.0"
cw20-base               = { version = "1.1.0", features = ["library"] }
cw-controllers          = "1.0.1"
cw-multi-test           = { git = "https://github.com/astroport-fi/cw-multi-test", branch = "feat/bank_with_send_hooks_1_0", features = ["cosmwasm_1_1"] }
cw-storage-plus         = "1.0.1"
cw-utils                = "1.0.1"
schemars                = "0.8.1"
semver                  = "1.0.20"
serde                   = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror               = "1.0.23"
neutron-sdk             = "0.10.0"
osmosis-std             = "0.21.0"
derivative              = "2.2"
itertools               = "0.12"

equinox-msg             = { path = "./packages/equinox_msg" }
eclipse-base            = { path = "./packages/eclipse-base" }
eclipsepad-staking      = { path = "./packages/eclipsepad-staking" }
minter-mocks            = { path = "./packages/minter-mocks" }
cw20-gift               = { path = "./packages/cw20-gift" }

eclipastro-token        = { path = "./contracts/token" }
token-converter         = { path = "./contracts/token_converter" }
flexible-staking        = { path = "./contracts/flexible_staking" }
timelock-staking        = { path = "./contracts/timelock_staking" }
reward-distributor      = { path = "./contracts/reward_distributor" }
voter                   = { path = "./contracts/voter" }
lp-staking              = { path = "./contracts/lp_staking" }
lockdrop                = { path = "./contracts/lockdrop" }

# astroport-core
# https://github.com/astroport-fi/hidden_astroport_core/tree/feat/incentivize_many
#
# packages
astroport               = { path = "./packages/astroport" }
astroport-circular-buffer = { path = "./packages/circular_buffer" }
#
# contracts
astroport-factory       = { path = "./packages/factory" }
astroport-incentives    = { path = "./packages/incentives" } # formerly Generator
astroport-pair          = { path = "./packages/pair" }
astroport-pair-stable   = { path = "./packages/pair_stable" }
astroport-router        = { path = "./packages/router" }
astroport-staking       = { path = "./packages/staking" }
astroport-vesting       = { path = "./packages/vesting" }
astroport-xastro-token  = { path = "./packages/xastro_token" }
astroport-tokenfactory-tracker = { path = "./packages/tokenfactory_tracker" }
astroport-whitelist     = { path = "./packages/whitelist" }

# astroport governance
# https://github.com/astroport-fi/hidden_astroport_governance/tree/feat/revamped_vxastro
#
# packages
astroport-governance    = { path = "./packages/astroport-governance" }
#
# contracts
astro-assembly          = { path = "./packages/assembly" }
builder-unlock          = { path = "./packages/builder_unlock" }
astroport-emissions-controller = { path = "./packages/emissions_controller" }
astroport-emissions-controller-outpost = { path = "./packages/emissions_controller_outpost" }
astroport-voting-escrow = { path = "./packages/voting_escrow" }


[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

