[workspace]
members = [
    "contracts/*",
    "packages/*",
    "multitests",
]
resolver = "2"

[workspace.package]
version    = "0.1.5"
edition    = "2021"
repository = "https://github.com/EclipsePad/equinox-contracts"
authors    = ["Tadao Fukuda"]
license    = "Apache-2.0"

[workspace.dependencies]
anyhow                  = "1"
cosmwasm-schema         = "1.5"
cosmwasm-std            = "1.5"
cw2                     = "1.1.0"
cw20                    = "1.1.0"
cw20-base               = { version = "1.1.0", features = ["library"] }
cw-controllers          = "1.0.1"
cw-multi-test           = "1.2.0"
cw-storage-plus         = "1.0.1"
cw-utils                = "1.0.1"
schemars                = "0.8.1"
semver                  = "1.0.20"
serde                   = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror               = "1.0.23"

equinox-msg             = { path = "./packages/equinox_msg" }
eclipastro-token        = { path = "./contracts/token" }
token-converter         = { path = "./contracts/token_converter" }
single-sided-staking    = { path = "./contracts/single_sided_staking" }
voter                   = { path = "./contracts/voter" }
lp-staking              = { path = "./contracts/lp_staking" }
lockdrop                = { path = "./contracts/lockdrop" }

astro-generator         = { path = "./contracts/astro_generator_test_purpose" }
faucet                  = { path = "./contracts/faucet_test_purpose" }

# gauge-contract          = { path = "./contracts/gauge_contract", features = ["library"] }
astroport-factory       = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.1.0" }
astroport-incentives    = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.1.0" }
astroport-pair          = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.1.0" }
astroport-pair-stable   = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.1.0" }
astroport-router        = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.1.0" }
astroport-staking       = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.1.0" }
astroport-vesting       = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.1.0" }
# astroport-xastro-token  = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.1.0" }
astroport               = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.1.0" }
# astroport-pair-stable   = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.1.0" }
# astroport-governance    = { git = "https://github.com/astroport-fi/astroport-governance.git", tag = "v5.1.0" }
astroport-tokenfactory-tracker = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.1.0" }

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
