[package]
name                    = "multitests"
version.workspace       = true
edition.workspace       = true
repository.workspace    = true
authors.workspace       = true
license.workspace       = true
description             = "multitest for equinox contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dev-dependencies]
anyhow                  = { workspace = true }
cosmwasm-std            = { workspace = true }
cw-controllers          = { workspace = true }
# cw-multi-test           = { workspace = true, features = ["cosmwasm_1_4"] }
cw-multi-test = { git = "https://github.com/astroport-fi/cw-multi-test", branch = "feat/bank_with_send_hooks_1_0", features = ["cosmwasm_1_1"] }
cw20                    = { workspace = true }
cw20-base = "1"
itertools = "0.11"

astro-generator         = { workspace = true }
faucet                  = { workspace = true }
equinox-msg             = { workspace = true }
eclipastro-token        = { workspace = true }
token-converter         = { workspace = true }
single-sided-staking    = { workspace = true }
voter                   = { workspace = true }
lp-staking              = { workspace = true }
lockdrop                = { workspace = true }
# gauge-contract          = { workspace = true }
astroport-incentives    = { workspace = true }
astroport-factory       = { workspace = true }
astroport-pair          = { workspace = true }
astroport-pair-stable   = { workspace = true }
astroport-router        = { workspace = true }
astroport-staking       = { workspace = true }
astroport-vesting       = { workspace = true }
# astroport-xastro-token  = { workspace = true }
astroport               = { workspace = true }
# astroport-governance    = { workspace = true }
astroport-tokenfactory-tracker = { workspace = true }

cosmwasm-schema = { workspace = true }
osmosis-std = "0.21.0"
