[package]
name = "astro-generator"
version = "1.0.0"
authors = ["Eclipse Pad, PTE."]
edition = "2021"
description = "Null"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cw-controllers      = { workspace = true }
cw-storage-plus     = { workspace = true }
cw-utils            = { workspace = true }
cw2                 = { workspace = true }
serde               = { workspace = true }
thiserror           = { workspace = true }
anyhow              = { workspace = true }
semver              = { workspace = true }
equinox-msg         = { workspace = true }

osmosis-std         = "0.21.0"
getrandom           = { version = "0.2.9", features = ["js"] }

astroport           = { workspace = true }
