[package]
name = "faucet"
version = "1.0.0"
authors = ["Eclipse Pad, PTE."]
edition = "2021"
description = "Null"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
astroport = { workspace = true }