[package]
name                    = "lockdrop"
version.workspace       = true
edition.workspace       = true
repository.workspace    = true
authors.workspace       = true
license.workspace       = true
description             = "Eclipse Equinox Lockdrop Contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema         = { workspace = true }
cosmwasm-std            = { workspace = true, features = ["cosmwasm_1_1"] }
cw20                    = { workspace = true }
cw2                     = { workspace = true }
cw-controllers          = { workspace = true }
cw-storage-plus         = { workspace = true }
cw-utils                = { workspace = true }
equinox-msg             = { workspace = true }
eclipse-base            = { workspace = true }
thiserror               = { workspace = true }
schemars                = { workspace = true }
semver                  = { workspace = true }
serde                   = { workspace = true }
astroport               = { workspace = true }
