[package]
name        = "eclipastro-token"
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
description = "Expanded implementation of a CosmWasm-20 compliant token for the Eclipse eclipASTRO token"
repository  = { workspace = true }
license     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2             = { workspace = true }
cw20            = { workspace = true }
cw20-base       = { workspace = true }
cosmwasm-std    = { workspace = true }
cosmwasm-schema = { workspace = true }
semver          = { workspace = true }
thiserror       = { workspace = true }
equinox-msg     = { workspace = true }
