[package]
name                    = "token-converter"
version.workspace       = true
edition.workspace       = true
repository.workspace    = true
authors.workspace       = true
license.workspace       = true
description             = "implementation of Eclipse's ASTRO to eclipASTRO converter and xASTRO staking reward calculator"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-controllers  = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
cw20            = { workspace = true }
semver          = { workspace = true }
thiserror       = { workspace = true }
token           = { workspace = true }
voter           = { workspace = true }
equinox-msg     = { workspace = true }

[dev-dependencies]
cw20-base       = { workspace = true }
anyhow          = { workspace = true }
cw-multi-test   = { workspace = true }
